@@ -24,6 +24,7 @@ import org.eclipse.ditto.internal.utils.config.DefaultScopedConfig;
 import org.eclipse.ditto.internal.utils.namespaces.BlockedNamespaces;
 import org.eclipse.ditto.internal.utils.persistentactors.AbstractPersistenceSupervisor;
 import org.eclipse.ditto.internal.utils.pubsub.DistributedPub;
+import org.eclipse.ditto.policies.enforcement.PolicyEnforcerProvider;
 import org.eclipse.ditto.policies.model.PolicyId;
 import org.eclipse.ditto.policies.model.signals.announcements.PolicyAnnouncement;
 import org.eclipse.ditto.policies.model.signals.commands.PolicyCommand;
@@ -39,24 +40,28 @@ import akka.actor.ActorRef;
 import akka.actor.Props;
 
 /**
- * Supervisor for {@link org.eclipse.ditto.policies.service.persistence.actors.PolicyPersistenceActor} which means it will create, start and watch it as child actor.
+ * Supervisor for {@link org.eclipse.ditto.policies.service.persistence.actors.PolicyPersistenceActor} which means
+ * it will create, start and watch it as child actor.
  * <p>
  * If the child terminates, it will wait for the calculated exponential back-off time and restart it afterwards.
- * Between the termination of the child and the restart, this actor answers to all requests with a {@link
- * PolicyUnavailableException} as fail fast strategy.
+ * Between the termination of the child and the restart, this actor answers to all requests with a
+ * {@link PolicyUnavailableException} as fail fast strategy.
  */
 public final class PolicySupervisorActor extends AbstractPersistenceSupervisor<PolicyId, PolicyCommand<?>> {
 
     private final ActorRef pubSubMediator;
     private final ActorRef announcementManager;
     private final PolicyConfig policyConfig;
+    private final PolicyEnforcerProvider policyEnforcerProvider;
 
     @SuppressWarnings("unused")
     private PolicySupervisorActor(final ActorRef pubSubMediator,
             final DistributedPub<PolicyAnnouncement<?>> policyAnnouncementPub,
-            @Nullable final BlockedNamespaces blockedNamespaces) {
+            @Nullable final BlockedNamespaces blockedNamespaces,
+            final PolicyEnforcerProvider policyEnforcerProvider) {
 
         super(blockedNamespaces, DEFAULT_LOCAL_ASK_TIMEOUT);
+        this.policyEnforcerProvider = policyEnforcerProvider;
         this.pubSubMediator = pubSubMediator;
         final DittoPoliciesConfig policiesConfig = DittoPoliciesConfig.of(
                 DefaultScopedConfig.dittoScoped(getContext().getSystem().settings().config())
@@ -82,19 +87,21 @@ public final class PolicySupervisorActor extends AbstractPersistenceSupervisor<P
      * @param pubSubMediator the PubSub mediator actor.
      * @param policyAnnouncementPub publisher interface of policy announcements.
      * @param blockedNamespaces the blocked namespaces functionality to retrieve/subscribe for blocked namespaces.
+     * @param policyEnforcerProvider used to load the policy enforcer to authorize commands.
      * @return the {@link Props} to create this actor.
      */
     public static Props props(final ActorRef pubSubMediator,
             final DistributedPub<PolicyAnnouncement<?>> policyAnnouncementPub,
-            @Nullable final BlockedNamespaces blockedNamespaces) {
+            @Nullable final BlockedNamespaces blockedNamespaces,
+            final PolicyEnforcerProvider policyEnforcerProvider) {
 
         return Props.create(PolicySupervisorActor.class, () -> new PolicySupervisorActor(pubSubMediator,
-                policyAnnouncementPub, blockedNamespaces));
+                policyAnnouncementPub, blockedNamespaces, policyEnforcerProvider));
     }
 
     @Override
     protected PolicyId getEntityId() throws Exception {
-        return PolicyId.of(URLDecoder.decode(getSelf().path().name(), StandardCharsets.UTF_8.name()));
+        return PolicyId.of(URLDecoder.decode(getSelf().path().name(), StandardCharsets.UTF_8));
     }
 
     @Override
@@ -104,7 +111,7 @@ public final class PolicySupervisorActor extends AbstractPersistenceSupervisor<P
 
     @Override
     protected Props getPersistenceEnforcerProps(final PolicyId entityId) {
-        return PolicyEnforcerActor.props(entityId, new PolicyCommandEnforcement());
+        return PolicyEnforcerActor.props(entityId, new PolicyCommandEnforcement(), policyEnforcerProvider);
     }
 
     @Override
@@ -112,6 +119,7 @@ public final class PolicySupervisorActor extends AbstractPersistenceSupervisor<P
         final DittoPoliciesConfig policiesConfig = DittoPoliciesConfig.of(
                 DefaultScopedConfig.dittoScoped(getContext().getSystem().settings().config())
         );
+
         return policiesConfig.getPolicyConfig().getSupervisorConfig().getExponentialBackOffConfig();
     }
 
@@ -123,6 +131,7 @@ public final class PolicySupervisorActor extends AbstractPersistenceSupervisor<P
     @Override
     protected DittoRuntimeExceptionBuilder<?> getUnavailableExceptionBuilder(@Nullable final PolicyId entityId) {
         final PolicyId policyId = entityId != null ? entityId : PolicyId.of("UNKNOWN:ID");
+
         return PolicyUnavailableException.newBuilder(policyId);
     }
 
@@ -135,6 +144,7 @@ public final class PolicySupervisorActor extends AbstractPersistenceSupervisor<P
         } catch (final Exception e) {
             log.error(e, "Failed to determine entity ID; becoming corrupted.");
             becomeCorrupted();
+
             return null;
         }
     }
